# ComfyUI_Native_DynamiCrafter

./: README.md  nodes.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
lvdm/models/samplers/: ddim_multiplecond.py
lvdm/modules/: attention.py
lvdm/modules/networks/: openaimodel3d.py
modules/: attention.py
modules/networks/: openaimodel3d.py
utils/: model_utils.py  utils.py
workflows/: dynamicrafter_512_basic.json  dynamicrafter_512_interp_gen.json
